fix container syling and vh on mobile. look to fix border issues.

--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -1,29 +1,38 @@
 .navbar {
-  position: absolute;
   overflow: hidden;
   bottom: 25%;
   width: 100%;
   padding: 0;
-  margin: 0;
   display: flex;
   list-style: none;
   justify-content: center;
   z-index: 1;
+  
 }
 
 ul li:hover {
   cursor: pointer;
-  color: rgb(34, 155, 255);
-   
+  color: rgb(0, 89, 255);
+  /* border-bottom: 1px solid #000; */
+  margin: 0 50px;
+  
 }
 
 ul li {
   text-decoration-color: #0000;
   transition: 0.5s;
-  color: white;
+  color: #000;
   font-size: 32px;
   /* padding: 5px 25px; */
   margin: 0 25px;
+  
+}
+
+@media only screen and (max-width: 767px) {
+  /* .navbar {
+    position: absolute;
+  } */
+  
 }
 
 
