--- a/src/Components/Information.css
+++ b/src/Components/Information.css
@@ -1,31 +1,29 @@
-
-
 html, body {
     overflow-x: hidden;
   }
   body {
     /* position: relative; */
     font-family: 'Readex Pro', sans-serif;
-
+    
   }
+
 
 
 .section {
     height: 100vh;
     /* padding-top: 32px; */
 }
-.container {
-    /* margin-top: 50px; */
-    /* height: 500px; */
-    border: 2px solid black;
-}
+
 
 .container h1 {
     font-size: 48px;
     text-align: center;
 }
+.container {
+    border: 1px solid black;
+}
 #home {
-    background-image: url("../../public/gokul-images/building.jpeg");
+    /* background-image: url("../../public/gokul-images/building.jpeg"); */
 
     /* Create the parallax scrolling effect */
     background-attachment: fixed;
@@ -33,6 +31,7 @@ html, body {
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
+    padding-top: 5%;
 }
 
 
@@ -52,17 +51,53 @@ html, body {
     background: linear-gradient(180deg, rgba(122,122,122,1) 0%, rgba(77,77,77,1) 100%);
 
 }
-
+#home .container {
+    text-align: center;
+    position: relative;
+    margin: 0 25%;
+    background-color: rgba(245, 245, 245, 0.7);
+    border: 2px solid black;
+    border-radius: 10px;
+}
+#home::before {    
+    content: "";
+    background-image: url('../../public/gokul-images/building.jpeg');
+    background-size: cover;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    bottom: 0px;
+    left: 0px;
+    opacity: 0.6;
+}
+#logo {
+    height: 300px;
+    width: 300px;
+}
 
 @media only screen and (max-width: 767px) {
     .section {
-        padding-top: 15%;
+        height: auto;
     }
-    .container {
+    
+    #home {
+        padding-top: 25%;
+    }
+
+    #home, #about {
+        /* padding: 0; */
+        height: 100vh;
+    }
+    #home .container {
         margin: 0;
     }
     .row .column {
         min-width: 0;
         margin: 0;
+    }
+    #logo {
+        max-height: 200px;
+        width: 200px;
+        
     }
   }
